WIP bookManage Page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-tailwind-ui-boilerplate",
+  "name": "book-store",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
