--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,8 +17,12 @@ djangorestframework = "^3.11.0"
 psycopg2-binary = "^2.8.5"
 python-decouple = "^3.3"
 djangorestframework-simplejwt = "^4.4.0"
+nltk = "^3.5"
+sklearn = "^0.0"
 
 [tool.poetry.dev-dependencies]
+flake8 = "^3.7.9"
+black = "^19.10b0"
 
 [build-system]
 requires = ["poetry>=0.12"]
