--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -14,5 +14,16 @@ services:
     volumes:
       - postgres_books_data:/var/lib/postgresql/data/
 
+  redis:
+    image: redis:5
+    container_name: redis_books
+    hostname: redis_books
+    ports:
+      - "$REDIS_PORT:6379"
+    volumes:
+      - redis_books_data:/data
+    restart: on-failure
+
 volumes:
   postgres_books_data:
+  redis_books_data:
