--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ python-decouple = "^3.3"
 djangorestframework-simplejwt = "^4.4.0"
 nltk = "^3.5"
 sklearn = "^0.0"
+django-redis = "^4.11.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7.9"
