--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ djangorestframework-simplejwt = "^4.4.0"
 nltk = "^3.5"
 sklearn = "^0.0"
 django-redis = "^4.11.0"
+pytest = "^5.4.2"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7.9"
