--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ nltk = "^3.5"
 sklearn = "^0.0"
 django-redis = "^4.11.0"
 pytest = "^5.4.2"
+pyarrow = "^0.17.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7.9"
