--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,9 +5,8 @@ description = ""
 authors = ["abidarelmehdi"]
 
 [tool.poetry.dependencies]
-python = "3.8"
+python = ">=3.7,<3.9"
 Django = "^3.0.6"
-Faker = "^4.0.3"
 Pillow = "^7.1.2"
 pandas = "^1.0.3"
 django-cors-headers = "^3.2.1"
@@ -19,9 +18,9 @@ python-decouple = "^3.3"
 djangorestframework-simplejwt = "^4.4.0"
 nltk = "^3.5"
 sklearn = "^0.0"
-django-redis = "^4.11.0"
 pytest = "^5.4.2"
 pyarrow = "^0.17.1"
+gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7.9"
